added destination chapter

--- a/index.html
+++ b/index.html
@@ -145,5 +145,99 @@
         </div>
       </div>
     </section>
+
+    <section class="destination">
+      <div class="destination-container">
+        <h1>Popular Destination</h1>
+        <div class="destination-btn">
+          <label>
+            <input type="radio" name="btn" id="" />
+            <span>Ancient Wonders</span>
+          </label>
+          <label>
+            <input type="radio" name="btn" id="" />
+            <span>Ancient Wonders</span>
+          </label>
+          <label>
+            <input type="radio" name="btn" id="" />
+            <span>Ancient Wonders</span>
+          </label>
+          <label>
+            <input type="radio" name="btn" id="" />
+            <span>ncient Wonders</span>
+          </label>
+        </div>
+
+        <div class="destination-cards">
+          <div class="desti-cards">
+            <img src="./images/rectangle 11.png" alt="" />
+            <div class="card-content">
+              <h2>Egypt</h2>
+              <p>Pyramid of Giza & Luxor Temples</p>
+              <a href="#">
+                Explore
+                <img src="./images/arrow right icon.svg" alt="" width="20px"
+              /></a>
+            </div>
+          </div>
+          <div class="desti-cards">
+            <img src="./images/rectangle 11.png" alt="" />
+            <div class="card-content">
+              <h2>Egypt</h2>
+              <p>Pyramid of Giza & Luxor Temples</p>
+              <a href="#">
+                Explore
+                <img src="./images/arrow right icon.svg" alt="" width="20px"
+              /></a>
+            </div>
+          </div>
+          <div class="desti-cards">
+            <img src="./images/rectangle 11.png" alt="" />
+            <div class="card-content">
+              <h2>Egypt</h2>
+              <p>Pyramid of Giza & Luxor Temples</p>
+              <a href="#">
+                Explore
+                <img src="./images/arrow right icon.svg" alt="" width="20px"
+              /></a>
+            </div>
+          </div>
+          <div class="desti-cards">
+            <img src="./images/rectangle 11.png" alt="" />
+            <div class="card-content">
+              <h2>Egypt</h2>
+              <p>Pyramid of Giza & Luxor Temples</p>
+              <a href="#">
+                Explore
+                <img src="./images/arrow right icon.svg" alt="" width="20px"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="gallery-container">
+        <h1>Gallery</h1>
+
+        <div class="gallery-images">
+          <img src="./images/gallery/1.png" alt="" />
+          <img src="./images/gallery/2.png" alt="" />
+          <img src="./images/gallery/3.png" alt="" />
+          <img src="./images/gallery/4.png" alt="" />
+          <img src="./images/gallery/5.png" alt="" />
+          <img src="./images/gallery/8.JPG" alt="" />
+          <img src="./images/gallery/9.JPG" alt="" />
+          <img src="./images/gallery/6.png" alt="" />
+          <img src="./images/gallery/7.png" alt="" />
+          <img src="./images/gallery/a.png" alt="" />
+          <img src="./images/gallery/12.png" alt="" />
+
+          <img src="./images/gallery/10.png" alt="" />
+          <img src="./images/gallery/11.png" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
