--- a/index.html
+++ b/index.html
@@ -239,5 +239,71 @@
         </div>
       </div>
     </section>
+
+    <section class="testimonial">
+      <div class="testimonial-container">
+        <h1>Testimonials</h1>
+        <div class="big-circle"></div>
+        <p>
+          A life-changing experience! From the Serengeti to the Maasai villages,
+          everything was perfectly planned.
+        </p>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="contact-container">
+        <h1>Contact Us</h1>
+        <div class="contact-left">
+          <div class="about-right">
+            <img
+              src="./images/Rectangle 5.png"
+              alt=""
+              class="manHat"
+              width="231px"
+              height="265px"
+            />
+            <img
+              src="./images/Rectangle 6.png"
+              alt=""
+              class="twobeach"
+              width="231px"
+              height="170px"
+            />
+          </div>
+        </div>
+        <div class="contact-right">
+          <form action="">
+            <div class="tags">
+              <label for="first-name">First name</label>
+              <input type="text" placeholder="enter first name" />
+            </div>
+            <div class="tags">
+              <label for="last-name">Last name</label>
+              <input type="text" placeholder="enter last name" />
+            </div>
+            <div class="tags">
+              <label for="email">email</label>
+              <input type="email" placeholder="enter email" />
+            </div>
+            <div class="tags">
+              <label for="country">Your country</label>
+              <input type="country" placeholder="enter your country" />
+            </div>
+
+            <div class="hero-btn">
+              <button>
+                Contact Us <img src="./images/arrow-right.png" alt="" />
+              </button>
+            </div>
+            <a href=""><h2>Privacy Policy</h2></a>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="infos">
+      <div class="infos-container"></div>
+    </section>
   </body>
 </html>
