finished mobile design

--- a/index.html
+++ b/index.html
@@ -303,7 +303,72 @@
     </section>
 
     <section class="infos">
-      <div class="infos-container"></div>
+      <div class="infos-container">
+        <div class="info-cards">
+          <div class="afrivista">
+            <img
+              src="./images/4568865 1.png"
+              alt=""
+              width="26px"
+              height="26px"
+            />
+            <h3>AfriVista</h3>
+          </div>
+          <p>Your gateway to Authenticate <br />African Adventures</p>
+
+          <div class="sm-icons">
+            <img src="./images/sm-icons.png" alt="" />
+          </div>
+        </div>
+        <div class="quick-links">
+          <h1>Quick Links</h1>
+          <a href="">Home</a>
+          <a href="">About Us</a>
+          <a href="">Destinations</a>
+          <a href="">Tour Packages</a>
+          <a href="">Gallery</a>
+          <a href="">Testimonials</a>
+          <a href="">Contact Us</a>
+        </div>
+        <div class="quick-links">
+          <h1>Top Destinations</h1>
+          <a href="">Nigerian</a>
+          <a href="">Kenya</a>
+          <a href="">Egypt</a>
+          <a href="">South Africa</a>
+          <a href="">Morocco</a>
+          <a href="">Rwanda</a>
+          <a href="">Zambia</a>
+        </div>
+        <div class="quick-links">
+          <h1>Legal & Support</h1>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Refund Policy</a>
+          <a href="">FAQ's</a>
+        </div>
+
+        <div class="quick-links">
+          <h1>
+            Sign up For our Newsletter
+            <br />
+            Email Addresses
+          </h1>
+          <div class="ded">
+            <label for="email"></label>
+
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Enter Email Addresses"
+            />
+            <div class="beb">
+              <img src="./images/arrow right icon.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
