fixed the desktop responsiveness too

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             width="30px"
           />
         </div>
+
+        <div class="nav-left-desktop">
+          <a href="">About Us</a>
+          <a href="">Tour Packages</a>
+          <a href="">Destinations</a>
+          <a href="">Gallery</a>
+          <a href="">Testimonials</a>
+          <div class="nav-btn">
+            <button>
+              Contact Us <img src="./images/arrow-right.png" alt="" />
+            </button>
+          </div>
+        </div>
       </div>
     </nav>
     <section class="hero">
@@ -253,51 +266,47 @@
 
     <section class="contact">
       <div class="contact-container">
-        <h1>Contact Us</h1>
         <div class="contact-left">
-          <div class="about-right">
+          <div class="im-right">
             <img
-              src="./images/Rectangle 5.png"
+              src="./images/contactimg.png"
               alt=""
-              class="manHat"
-              width="231px"
-              height="265px"
-            />
-            <img
-              src="./images/Rectangle 6.png"
-              alt=""
-              class="twobeach"
-              width="231px"
-              height="170px"
+              class="contactImg"
+              width="587px"
+              height="597px"
             />
           </div>
         </div>
-        <div class="contact-right">
-          <form action="">
-            <div class="tags">
-              <label for="first-name">First name</label>
-              <input type="text" placeholder="enter first name" />
-            </div>
-            <div class="tags">
-              <label for="last-name">Last name</label>
-              <input type="text" placeholder="enter last name" />
-            </div>
-            <div class="tags">
-              <label for="email">email</label>
-              <input type="email" placeholder="enter email" />
-            </div>
-            <div class="tags">
-              <label for="country">Your country</label>
-              <input type="country" placeholder="enter your country" />
-            </div>
+        <div class="con-right">
+          <h1>Contact Us</h1>
 
-            <div class="hero-btn">
-              <button>
-                Contact Us <img src="./images/arrow-right.png" alt="" />
-              </button>
-            </div>
-            <a href=""><h2>Privacy Policy</h2></a>
-          </form>
+          <div class="contact-right">
+            <form action="">
+              <div class="tags">
+                <label for="first-name">First name</label>
+                <input type="text" placeholder="enter first name" />
+              </div>
+              <div class="tags">
+                <label for="last-name">Last name</label>
+                <input type="text" placeholder="enter last name" />
+              </div>
+              <div class="tags">
+                <label for="email">email</label>
+                <input type="email" placeholder="enter email" />
+              </div>
+              <div class="tags">
+                <label for="country">Your country</label>
+                <input type="country" placeholder="enter your country" />
+              </div>
+
+              <div class="hero-btn">
+                <button>
+                  Contact Us <img src="./images/arrow-right.png" alt="" />
+                </button>
+              </div>
+              <a href=""><h2>Privacy Policy</h2></a>
+            </form>
+          </div>
         </div>
       </div>
     </section>
